--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,27 @@
 /* Other rules */
+
+:root {
+  --ps-black: #191919;
+  --ps-grey: #b2b2b2;
+  --ps-lightGrey: #c5c5c5;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+  background-color: var(--ps-lightGrey);
+  color: var(--ps-black);
+}
+
+.container {
+  width: 1240px;
+  margin: 100px auto;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+input {
+  outline: none;
+}
