--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,34 @@ a {
 input {
   outline: none;
 }
+
+/* Form User */
+.user-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.user-form input {
+  width: 300px;
+  height: 30px;
+  margin: 20px 0;
+  border: none;
+  border-bottom: 1px solid black;
+  padding: 0 6px;
+  font-size: 1.1rem;
+  border-radius: 6px;
+}
+
+.user-form button {
+  width: 200px;
+  height: 30px;
+  border: none;
+  border-radius: 10px;
+  margin: 20px 0;
+}
+
+.user-form .message-error {
+  color: red;
+}
