--- a/src/App.scss
+++ b/src/App.scss
@@ -34,7 +34,7 @@ input {
   input {
     width: 300px;
     height: 30px;
-    margin: 20px 0;
+    margin: 16px 0 8px 0;
     border: none;
     border-bottom: 1px solid black;
     padding: 0 6px;
@@ -44,13 +44,21 @@ input {
 }
 
 .user-form button {
-  width: 200px;
+  width: 300px;
   height: 30px;
   border: none;
   border-radius: 10px;
   margin: 20px 0;
+  cursor: pointer;
+  background-color: rgb(6, 59, 6);
+  color: white;
+  font-size: 1.1rem;
 }
 
 .user-form .message-error {
-  color: red;
+  color: $ps-error;
+}
+
+.form-group {
+  margin-bottom: 1rem;
 }
